- Added calculation of average daily medical, rx, and total cost for each patient over     whole training period, training period before diagnosis, and training period before diagnosis - Added accuracy.py which computes accuracy of predictions for most expensive patients from target data - Added dataimporter.py to allow loading of data directly into Python interpreter (useful for working remotely) - Doesn't have all variables calculated

--- a/dataimporter.ipynb
+++ b/dataimporter.ipynb
@@ -20,7 +20,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "filepath ='data/'\n",
@@ -234,7 +236,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Split costs into prediagnosis and postdiagnosis\n",
+    "    members['prediag_medicalcost'] = 0.0\n",
+    "    members['postdiag_medicalcost'] = 0.0\n",
+    "    members['prediag_rxcost'] = 0.0\n",
+    "    members['postdiag_rxcost'] = 0.0\n",
+    "    members['prediag_totalcost'] = 0.0\n",
+    "    members['postdiag_totalcost'] = 0.0\n",
+    "\n",
+    "    prediag_med = medical_wanted[medical_wanted.DAYS_FROM_DIAG>=0].groupby('PATID')['STD_COST'].sum()\n",
+    "    postdiag_med = medical_wanted[medical_wanted.DAYS_FROM_DIAG<0].groupby('PATID')['STD_COST'].sum()\n",
+    "\n",
+    "    prediag_rx = rxdata[rxdata.DAYS_FROM_DIAG>=0].groupby('PATID')['STD_COST'].sum()\n",
+    "    postdiag_rx = rxdata[rxdata.DAYS_FROM_DIAG<0].groupby('PATID')['STD_COST'].sum()\n",
+    "\n",
+    "    for k in range(len(prediag_med)):\n",
+    "        members.at[prediag_med.index[k], 'prediag_medicalcost'] = prediag_med.iat[k]\n",
+    "        members.at[prediag_med.index[k], 'prediag_totalcost'] += prediag_med.iat[k]\n",
+    "    for k in range(len(postdiag_med)):\n",
+    "        members.at[postdiag_med.index[k], 'postdiag_medicalcost'] = postdiag_med.iat[k]\n",
+    "        members.at[postdiag_med.index[k], 'postdiag_totalcost'] += postdiag_med.iat[k]\n",
+    "    for k in range(len(prediag_rx)):\n",
+    "        members.at[prediag_rx.index[k], 'prediag_rxcost'] = prediag_rx.iat[k]\n",
+    "        members.at[prediag_rx.index[k], 'prediag_totalcost'] += prediag_rx.iat[k]\n",
+    "    for k in range(len(postdiag_rx)):\n",
+    "        members.at[postdiag_rx.index[k], 'postdiag_rxcost'] = postdiag_rx.iat[k]\n",
+    "        members.at[postdiag_rx.index[k], 'postdiag_totalcost'] += postdiag_rx.iat[k]\n",
+    "\n",
+    "    #Calculate average daily costs\n",
+    "    members['prediag_days'] = 0       # First need to calculate number of days before and after diagnosis\n",
+    "    members['postdiag_days'] = 0\n",
+    "\n",
+    "    members['prediag_days'] = -1 * members[['minmedicalday', 'minrxday']].min(axis=1) + 1\n",
+    "    members['postdiag_days'] = members[['maxmedicalday', 'maxrxday']].max(axis=1) + 1\n",
+    "\n",
+    "    members['prediag_dailymedcost'] = members['prediag_medicalcost'] / members['prediag_days']\n",
+    "    members['postdiag_dailymedcost'] = members['postdiag_medicalcost'] / members['postdiag_days']\n",
+    "    members['prediag_dailyrxcost'] = members['prediag_rxcost'] / members['prediag_days']\n",
+    "    members['postdiag_dailyrxcost'] = members['postdiag_rxcost'] / members['postdiag_days']\n",
+    "    members['prediag_dailytotalcost'] = members['prediag_totalcost'] / members['prediag_days']\n",
+    "    members['postdiag_dailytotalcost'] = members['postdiag_totalcost'] / members['postdiag_days']\n",
+    "\n",
+    "\n",
+    "    members['dailymedicalcost'] = members['medicalcost'] / (members['prediag_days'] + members['postdiag_days'])\n",
+    "    members['dailyrxcost'] = members['rxcost'] / (members['prediag_days'] + members['postdiag_days'])\n",
+    "    members['dailytotalcost'] = members['totalcost'] / (members['prediag_days'] + members['postdiag_days'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#emergency=['23','24', '21', '41', '20', '42']\n",
@@ -260,7 +319,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#psychiatric=['53', '55', '51', '52', '57'] # 51 is inpatient faciliity, 55 is res. sub. abuse\n",
@@ -284,7 +345,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#regular=['11', '01', '81','22', '60', '49', '71', '62', '17', '50', '61', '03']\n",
@@ -316,7 +379,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#elderly=['13', '31', '32', '33']\n",
@@ -340,7 +405,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#home=['12', '14', '15']\n",
@@ -363,7 +430,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#dialysis=['65']\n",
@@ -384,7 +453,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#hospice=['34']\n",
@@ -405,7 +476,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#unknown=['99', 'None']\n",
@@ -427,7 +500,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Plot average cost for all POS codes\n",
@@ -448,7 +523,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Add new column for region (should find a way to avoid this with groupby, but can't currently)\n",
@@ -485,7 +562,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Create 5-day bins and bin labels. I think this puts bin 0 at bin 0,5\n",
@@ -506,7 +585,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Create 7-day bins and bin labels.\n",
@@ -525,7 +606,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Create 10-day bins and bin labels.\n",
@@ -544,7 +627,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Create 20-day bins and bin labels.\n",
@@ -563,7 +648,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Create 30-day bins and bin labels.\n",
@@ -583,7 +670,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Create 60-day bins and bin labels.\n",
@@ -603,7 +692,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Create 120-day bins and bin labels.\n",
@@ -623,7 +714,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temp = rxdata.groupby(['PATID', 'sixtydaybin_id'])['STD_COST'].sum().reset_index(name='bin_cost')\n",
@@ -646,7 +739,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "min_day_med = medical_wanted.DAYS_FROM_DIAG.min()\n",
@@ -658,7 +753,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Create 5-day bins and bin labels.\n",
@@ -678,7 +775,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temp = medical_wanted.groupby(['PATID', 'fivedaybin_id'])['STD_COST'].sum().reset_index(name='bin_cost')\n",
@@ -690,7 +789,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Create 7-day bins and bin labels.\n",
@@ -710,7 +811,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temp = medical_wanted.groupby(['PATID', 'sevendaybin_id'])['STD_COST'].sum().reset_index(name='bin_cost')\n",
@@ -722,7 +825,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Create 10-day bins and bin labels.\n",
@@ -742,7 +847,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temp = medical_wanted.groupby(['PATID', 'tendaybin_id'])['STD_COST'].sum().reset_index(name='bin_cost')\n",
@@ -754,7 +861,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Create 20-day bins and bin labels.\n",
@@ -774,7 +883,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temp = medical_wanted.groupby(['PATID', 'twentydaybin_id'])['STD_COST'].sum().reset_index(name='bin_cost')\n",
@@ -786,7 +897,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Create 30-day bins and bin labels.\n",
@@ -806,7 +919,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temp = medical_wanted.groupby(['PATID', 'thirtydaybin_id'])['STD_COST'].sum().reset_index(name='bin_cost')\n",
@@ -818,7 +933,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Create 60-day bins and bin labels.\n",
@@ -838,7 +955,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temp = medical_wanted.groupby(['PATID', 'sixtydaybin_id'])['STD_COST'].sum().reset_index(name='bin_cost')\n",
@@ -850,7 +969,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Create 120-day bins and bin labels.\n",
@@ -870,7 +991,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temp = medical_wanted.groupby(['PATID', 'onetwentydaybin_id'])['STD_COST'].sum().reset_index(name='bin_cost')\n",
@@ -898,7 +1021,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temp = medical_wanted.groupby(['PATID', 'fivedaybin_id'])['STD_COST'].sum().reset_index(name='bin_cost')\n",
@@ -925,7 +1050,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "expensive_guy=medical_wanted.loc[medical_wanted['PATID']=='33068627845.0']\n",
@@ -937,7 +1064,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#This cell shows an example where the total cost doesn't cancel to zero. You can see that it looks like maybe\n",
@@ -957,7 +1086,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Find the total number of members in each bucket for training\n",
@@ -967,7 +1098,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Find the min and max cost in each bucket for training\n",
@@ -981,7 +1114,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Create bucket labels for target total cost\n",
@@ -992,7 +1127,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#why is there a negative minimum? Should we throw these out? How to deal with them?\n",
@@ -1003,7 +1140,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "medical_wanted_t[medical_wanted_t['STD_COST']<0]\n",
@@ -1014,7 +1153,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#This cell shows an example where the total cost doesn't cancel to zero. You can see that it looks like maybe\n",
