--- a/dataimporterfromsaves.ipynb
+++ b/dataimporterfromsaves.ipynb
@@ -124,7 +124,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "members['infpardisdiag']=0 #001-139\n",
@@ -183,7 +185,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "members['allergies'] =0 # 04\n",
@@ -327,7 +331,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#incredibly slow, probs don't bother running this.\n",
@@ -461,6 +467,61 @@
    "source": [
     "members['lasttimerxnodoctor']=np.absolute(members['maxrxday']-members['maxmedicalday'])\n",
     "members['firsttimerxnodoctor']=np.absolute(members['minmedicalday']-members['minrxday'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Split costs into prediagnosis and postdiagnosis\n",
+    "    members['prediag_medicalcost'] = 0.0\n",
+    "    members['postdiag_medicalcost'] = 0.0\n",
+    "    members['prediag_rxcost'] = 0.0\n",
+    "    members['postdiag_rxcost'] = 0.0\n",
+    "    members['prediag_totalcost'] = 0.0\n",
+    "    members['postdiag_totalcost'] = 0.0\n",
+    "\n",
+    "    prediag_med = medical_wanted[medical_wanted.DAYS_FROM_DIAG>=0].groupby('PATID')['STD_COST'].sum()\n",
+    "    postdiag_med = medical_wanted[medical_wanted.DAYS_FROM_DIAG<0].groupby('PATID')['STD_COST'].sum()\n",
+    "\n",
+    "    prediag_rx = rxdata[rxdata.DAYS_FROM_DIAG>=0].groupby('PATID')['STD_COST'].sum()\n",
+    "    postdiag_rx = rxdata[rxdata.DAYS_FROM_DIAG<0].groupby('PATID')['STD_COST'].sum()\n",
+    "\n",
+    "    for k in range(len(prediag_med)):\n",
+    "        members.at[prediag_med.index[k], 'prediag_medicalcost'] = prediag_med.iat[k]\n",
+    "        members.at[prediag_med.index[k], 'prediag_totalcost'] += prediag_med.iat[k]\n",
+    "    for k in range(len(postdiag_med)):\n",
+    "        members.at[postdiag_med.index[k], 'postdiag_medicalcost'] = postdiag_med.iat[k]\n",
+    "        members.at[postdiag_med.index[k], 'postdiag_totalcost'] += postdiag_med.iat[k]\n",
+    "    for k in range(len(prediag_rx)):\n",
+    "        members.at[prediag_rx.index[k], 'prediag_rxcost'] = prediag_rx.iat[k]\n",
+    "        members.at[prediag_rx.index[k], 'prediag_totalcost'] += prediag_rx.iat[k]\n",
+    "    for k in range(len(postdiag_rx)):\n",
+    "        members.at[postdiag_rx.index[k], 'postdiag_rxcost'] = postdiag_rx.iat[k]\n",
+    "        members.at[postdiag_rx.index[k], 'postdiag_totalcost'] += postdiag_rx.iat[k]\n",
+    "\n",
+    "    #Calculate average daily costs\n",
+    "    members['prediag_days'] = 0       # First need to calculate number of days before and after diagnosis\n",
+    "    members['postdiag_days'] = 0\n",
+    "\n",
+    "    members['prediag_days'] = -1 * members[['minmedicalday', 'minrxday']].min(axis=1) + 1\n",
+    "    members['postdiag_days'] = members[['maxmedicalday', 'maxrxday']].max(axis=1) + 1\n",
+    "\n",
+    "    members['prediag_dailymedcost'] = members['prediag_medicalcost'] / members['prediag_days']\n",
+    "    members['postdiag_dailymedcost'] = members['postdiag_medicalcost'] / members['postdiag_days']\n",
+    "    members['prediag_dailyrxcost'] = members['prediag_rxcost'] / members['prediag_days']\n",
+    "    members['postdiag_dailyrxcost'] = members['postdiag_rxcost'] / members['postdiag_days']\n",
+    "    members['prediag_dailytotalcost'] = members['prediag_totalcost'] / members['prediag_days']\n",
+    "    members['postdiag_dailytotalcost'] = members['postdiag_totalcost'] / members['postdiag_days']\n",
+    "\n",
+    "\n",
+    "    members['dailymedicalcost'] = members['medicalcost'] / (members['prediag_days'] + members['postdiag_days'])\n",
+    "    members['dailyrxcost'] = members['rxcost'] / (members['prediag_days'] + members['postdiag_days'])\n",
+    "    members['dailytotalcost'] = members['totalcost'] / (members['prediag_days'] + members['postdiag_days'])"
    ]
   },
   {
@@ -670,7 +731,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Make True/False variable for our trees\n",
@@ -686,7 +749,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
@@ -734,7 +799,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#All the same stuff, but with the full data.  Run as is to test your tree from above on the full data. (SPOILER ALERT: it sucks)\n",
@@ -842,7 +909,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#It generates some cool stuff like so:\n",
@@ -852,7 +921,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Crossvalidation for variable importance for trees on little sets.\n",
@@ -885,7 +956,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#happy counting\n",
