cleaned; added more variables

--- a/dataimporterfromsaves.ipynb
+++ b/dataimporterfromsaves.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -184,12 +184,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "#endocrine divisions\n",
+    "members['thyroiddiag']=0 #240-246\n",
+    "\n",
+    "members['2diabmellnocomp']=0 #2490\n",
+    "members['2diabmellketoa']=0 #2491\n",
+    "members['2diabmellosmol']=0 #2492\n",
+    "members['2diabmellcoma']=0 #2493\n",
+    "members['2diabmellrenal']=0 #2494\n",
+    "members['2diabmellopth']=0 #2495\n",
+    "members['2diabmellneuro']=0 #2496\n",
+    "members['2diabmellcirc']=0 #2497\n",
+    "members['2diabmellother']=0 #2498\n",
+    "members['2diabmellunspec']=0 #2499\n",
+    "\n",
+    "members['diabmellnocomp']=0 #2500\n",
+    "members['diabmellketoa']=0 #2501\n",
+    "members['diabmellosmol']=0 #2502\n",
+    "members['diabmellcoma']=0 #2503\n",
+    "members['diabmellrenal']=0 #2504\n",
+    "members['diabmellopth']=0 #2505\n",
+    "members['diabmellneuro']=0 #2506\n",
+    "members['diabmellcirc']=0 #2507\n",
+    "members['diabmellother']=0 #2508\n",
+    "members['diabmellunspec']=0 #2509\n",
+    "\n",
+    "members['otherendodiag']=0 #251-259\n",
+    "members['nutritdefdiag']=0 #269-269\n",
+    "members['metabimmdiag']=0 #270-279\n",
+    "\n",
+    "dummy = medical_wanted.groupby('PATID')\n",
+    "patids = list(members.index)\n",
+    "for k in patids:\n",
+    "    try:\n",
+    "        tinydummy = dummy.get_group(k)\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='240') & (tinydummy['DIAG1']<='24699')]):\n",
+    "            members.loc[k,'thyroiddiag']=1\n",
+    "            \n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2490') & (tinydummy['DIAG1']<='24909')]):\n",
+    "            members.loc[k,'2diabmellnocomp']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2491') & (tinydummy['DIAG1']<='24919')]):\n",
+    "            members.loc[k,'2diabmellketoa']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2492') & (tinydummy['DIAG1']<='24929')]):\n",
+    "            members.loc[k,'2diabmellosmol']=1    \n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2493') & (tinydummy['DIAG1']<='24939')]):\n",
+    "            members.loc[k,'2diabmellcoma']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2494') & (tinydummy['DIAG1']<='24949')]):\n",
+    "            members.loc[k,'2diabmellrenal']=1  \n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2495') & (tinydummy['DIAG1']<='24959')]):\n",
+    "            members.loc[k,'2diabmellopth']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2496') & (tinydummy['DIAG1']<='24969')]):\n",
+    "            members.loc[k,'2diabmellneuro']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2497') & (tinydummy['DIAG1']<='24979')]):\n",
+    "            members.loc[k,'2diabmellcirc']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2498') & (tinydummy['DIAG1']<='24989')]):\n",
+    "            members.loc[k,'2diabmellother']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2499') & (tinydummy['DIAG1']<='24999')]):\n",
+    "            members.loc[k,'2diabmellunspec']=1\n",
+    "        \n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2500') & (tinydummy['DIAG1']<='25009')]):\n",
+    "            members.loc[k,'diabmellnocomp']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2501') & (tinydummy['DIAG1']<='25019')]):\n",
+    "            members.loc[k,'diabmellketoa']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2502') & (tinydummy['DIAG1']<='25029')]):\n",
+    "            members.loc[k,'diabmellosmol']=1    \n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2503') & (tinydummy['DIAG1']<='25039')]):\n",
+    "            members.loc[k,'diabmellcoma']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2504') & (tinydummy['DIAG1']<='25049')]):\n",
+    "            members.loc[k,'diabmellrenal']=1  \n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2505') & (tinydummy['DIAG1']<='25059')]):\n",
+    "            members.loc[k,'diabmellopth']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2506') & (tinydummy['DIAG1']<='25069')]):\n",
+    "            members.loc[k,'diabmellneuro']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2507') & (tinydummy['DIAG1']<='25079')]):\n",
+    "            members.loc[k,'diabmellcirc']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2508') & (tinydummy['DIAG1']<='25089')]):\n",
+    "            members.loc[k,'diabmellother']=1\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='2509') & (tinydummy['DIAG1']<='25099')]):\n",
+    "            members.loc[k,'diabmellunspec']=1\n",
+    "            \n",
+    "        tinydummy = dummy.get_group(k)\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='251') & (tinydummy['DIAG1']<='25999')]):\n",
+    "            members.loc[k,'otherendodiag']=1\n",
+    "        tinydummy = dummy.get_group(k)\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='260') & (tinydummy['DIAG1']<='26999')]):\n",
+    "            members.loc[k,'nutridefdiag']=1\n",
+    "        tinydummy = dummy.get_group(k)\n",
+    "        if len(tinydummy[(tinydummy['DIAG1']>='270') & (tinydummy['DIAG1']<='27999')]):\n",
+    "            members.loc[k,'metabimmdiag']=1\n",
+    "    except KeyError:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#rxdata\n",
     "members['allergies'] =0 # 04\n",
     "members['antiinfectives']=0 # 08\n",
     "members['antineoplastic']=0 #10\n",
@@ -259,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -281,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -300,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -319,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -459,14 +560,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "members['lasttimerxnodoctor']=np.absolute(members['maxrxday']-members['maxmedicalday'])\n",
-    "members['firsttimerxnodoctor']=np.absolute(members['minmedicalday']-members['minrxday'])"
+    "try: \n",
+    "    members['lasttimerxnodoctor']=np.absolute(members['maxrxday']-members['maxmedicalday'])\n",
+    "    members['firsttimerxnodoctor']=np.absolute(members['minmedicalday']-members['minrxday'])\n",
+    "except TypeError:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "medical_wanted['STD_COST']=medical_wanted['STD_COST'].apply(pd.to_numeric)\n",
+    "#rxdata['STD_COST']=rxdata['STD_COST'].apply(pd.to_numeric)\n",
+    "#Split costs into prediagnosis and postdiagnosis\n",
+    "members['prediag_medicalcost'] = 0.0\n",
+    "members['postdiag_medicalcost'] = 0.0\n",
+    "members['prediag_rxcost'] = 0.0\n",
+    "members['postdiag_rxcost'] = 0.0\n",
+    "members['prediag_totalcost'] = 0.0\n",
+    "members['postdiag_totalcost'] = 0.0\n",
+    "\n",
+    "prediag_med = medical_wanted[medical_wanted.DAYS_FROM_DIAG>=0].groupby('PATID')['STD_COST'].sum()\n",
+    "postdiag_med = medical_wanted[medical_wanted.DAYS_FROM_DIAG<0].groupby('PATID')['STD_COST'].sum()\n",
+    "\n",
+    "prediag_rx = rxdata[rxdata.DAYS_FROM_DIAG>=0].groupby('PATID')['STD_COST'].sum()\n",
+    "postdiag_rx = rxdata[rxdata.DAYS_FROM_DIAG<0].groupby('PATID')['STD_COST'].sum()\n",
+    "\n",
+    "for k in range(len(prediag_med)):\n",
+    "    members.at[prediag_med.index[k], 'prediag_medicalcost'] = prediag_med.iat[k]\n",
+    "    members.at[prediag_med.index[k], 'prediag_totalcost'] += prediag_med.iat[k]\n",
+    "for k in range(len(postdiag_med)):\n",
+    "    members.at[postdiag_med.index[k], 'postdiag_medicalcost'] = postdiag_med.iat[k]\n",
+    "    members.at[postdiag_med.index[k], 'postdiag_totalcost'] += postdiag_med.iat[k]\n",
+    "for k in range(len(prediag_rx)):\n",
+    "    members.at[prediag_rx.index[k], 'prediag_rxcost'] = prediag_rx.iat[k]\n",
+    "    members.at[prediag_rx.index[k], 'prediag_totalcost'] += prediag_rx.iat[k]\n",
+    "for k in range(len(postdiag_rx)):\n",
+    "    members.at[postdiag_rx.index[k], 'postdiag_rxcost'] = postdiag_rx.iat[k]\n",
+    "    members.at[postdiag_rx.index[k], 'postdiag_totalcost'] += postdiag_rx.iat[k]\n",
+    "    \n",
+    "#Calculate average daily costs\n",
+    "members['prediag_days'] = 0       # First need to calculate number of days before and after diagnosis\n",
+    "members['postdiag_days'] = 0\n",
+    "try:\n",
+    "    members['prediag_days'] = -1 * members[['minmedicalday', 'minrxday']].min(axis=1) + 1\n",
+    "    members['postdiag_days'] = members[['maxmedicalday', 'maxrxday']].max(axis=1) + 1\n",
+    "except TypeError:\n",
+    "    pass\n",
+    "members['prediag_dailymedcost'] = members['prediag_medicalcost'] / members['prediag_days']\n",
+    "members['postdiag_dailymedcost'] = members['postdiag_medicalcost'] / members['postdiag_days']\n",
+    "members['prediag_dailyrxcost'] = members['prediag_rxcost'] / members['prediag_days']\n",
+    "members['postdiag_dailyrxcost'] = members['postdiag_rxcost'] / members['postdiag_days']\n",
+    "members['prediag_dailytotalcost'] = members['prediag_totalcost'] / members['prediag_days']\n",
+    "members['postdiag_dailytotalcost'] = members['postdiag_totalcost'] / members['postdiag_days']\n",
+    "\n",
+    "\n",
+    "members['dailymedicalcost'] = members['medicalcost'] / (members['prediag_days'] + members['postdiag_days'])\n",
+    "members['dailyrxcost'] = members['rxcost'] / (members['prediag_days'] + members['postdiag_days'])\n",
+    "members['dailytotalcost'] = members['totalcost'] / (members['prediag_days'] + members['postdiag_days'])"
    ]
   },
   {
@@ -476,53 +634,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "#Split costs into prediagnosis and postdiagnosis\n",
-    "    members['prediag_medicalcost'] = 0.0\n",
-    "    members['postdiag_medicalcost'] = 0.0\n",
-    "    members['prediag_rxcost'] = 0.0\n",
-    "    members['postdiag_rxcost'] = 0.0\n",
-    "    members['prediag_totalcost'] = 0.0\n",
-    "    members['postdiag_totalcost'] = 0.0\n",
-    "\n",
-    "    prediag_med = medical_wanted[medical_wanted.DAYS_FROM_DIAG>=0].groupby('PATID')['STD_COST'].sum()\n",
-    "    postdiag_med = medical_wanted[medical_wanted.DAYS_FROM_DIAG<0].groupby('PATID')['STD_COST'].sum()\n",
-    "\n",
-    "    prediag_rx = rxdata[rxdata.DAYS_FROM_DIAG>=0].groupby('PATID')['STD_COST'].sum()\n",
-    "    postdiag_rx = rxdata[rxdata.DAYS_FROM_DIAG<0].groupby('PATID')['STD_COST'].sum()\n",
-    "\n",
-    "    for k in range(len(prediag_med)):\n",
-    "        members.at[prediag_med.index[k], 'prediag_medicalcost'] = prediag_med.iat[k]\n",
-    "        members.at[prediag_med.index[k], 'prediag_totalcost'] += prediag_med.iat[k]\n",
-    "    for k in range(len(postdiag_med)):\n",
-    "        members.at[postdiag_med.index[k], 'postdiag_medicalcost'] = postdiag_med.iat[k]\n",
-    "        members.at[postdiag_med.index[k], 'postdiag_totalcost'] += postdiag_med.iat[k]\n",
-    "    for k in range(len(prediag_rx)):\n",
-    "        members.at[prediag_rx.index[k], 'prediag_rxcost'] = prediag_rx.iat[k]\n",
-    "        members.at[prediag_rx.index[k], 'prediag_totalcost'] += prediag_rx.iat[k]\n",
-    "    for k in range(len(postdiag_rx)):\n",
-    "        members.at[postdiag_rx.index[k], 'postdiag_rxcost'] = postdiag_rx.iat[k]\n",
-    "        members.at[postdiag_rx.index[k], 'postdiag_totalcost'] += postdiag_rx.iat[k]\n",
-    "\n",
-    "    #Calculate average daily costs\n",
-    "    members['prediag_days'] = 0       # First need to calculate number of days before and after diagnosis\n",
-    "    members['postdiag_days'] = 0\n",
-    "\n",
-    "    members['prediag_days'] = -1 * members[['minmedicalday', 'minrxday']].min(axis=1) + 1\n",
-    "    members['postdiag_days'] = members[['maxmedicalday', 'maxrxday']].max(axis=1) + 1\n",
-    "\n",
-    "    members['prediag_dailymedcost'] = members['prediag_medicalcost'] / members['prediag_days']\n",
-    "    members['postdiag_dailymedcost'] = members['postdiag_medicalcost'] / members['postdiag_days']\n",
-    "    members['prediag_dailyrxcost'] = members['prediag_rxcost'] / members['prediag_days']\n",
-    "    members['postdiag_dailyrxcost'] = members['postdiag_rxcost'] / members['postdiag_days']\n",
-    "    members['prediag_dailytotalcost'] = members['prediag_totalcost'] / members['prediag_days']\n",
-    "    members['postdiag_dailytotalcost'] = members['postdiag_totalcost'] / members['postdiag_days']\n",
-    "\n",
-    "\n",
-    "    members['dailymedicalcost'] = members['medicalcost'] / (members['prediag_days'] + members['postdiag_days'])\n",
-    "    members['dailyrxcost'] = members['rxcost'] / (members['prediag_days'] + members['postdiag_days'])\n",
-    "    members['dailytotalcost'] = members['totalcost'] / (members['prediag_days'] + members['postdiag_days'])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
